Tweaked weight on headings and displayName, and fixed bug where display name was wrapping.

--- a/assets/components/infoSection/infoSection.scss
+++ b/assets/components/infoSection/infoSection.scss
@@ -16,6 +16,7 @@
 
 	.component-info-section__header {
 		padding-bottom: $gu-v-spacing;
+		font-weight: bold;
 
 		@include mq($from: desktop) {
 			width: 20%;
